--- a/templates/nginx-https.conf.j2
+++ b/templates/nginx-https.conf.j2
@@ -1,36 +1,54 @@
-add_header X-Frame-Options SAMEORIGIN;
-add_header X-Content-Type-Options nosniff;
-add_header X-XSS-Protection "1; mode=block";
-add_header Content-Security-Policy "default-src 'self'; script-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; font-src 'self'; frame-src 'none'; object-src 'none'";
 
-
-{% for domain in domains %}
 server {
-    listen 443 ssl default deferred http2;
+    listen 443 ssl http2;
 
-    server_name {{ domain }};
+    server_name {{ domains | join(' ') }};
     root /var/www/{{ inventory_hostname }};
-    ssl_certificate         /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
-    ssl_certificate_key     /etc/letsencrypt/live/{{ domain }}/privkey.pem;
-    ssl_trusted_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem;
+    ssl_certificate         /var/ssl/{{ inventory_hostname }}/0001_chain.pem;
+    ssl_certificate_key     /var/ssl/{{ inventory_hostname }}/privkey.pem;
+    ssl_trusted_certificate /var/ssl/{{ inventory_hostname }}/0001_chain.pem;
     
-    ssl on;
     ssl_session_cache shared:SSL:50m;
     ssl_session_timeout 5m;
     ssl_stapling on;
     ssl_stapling_verify on;
 
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers "ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA:ECDHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES256-GCM-SHA384:AES128-GCM-SHA256:AES256-SHA256:AES128-SHA256:AES256-SHA:AES128-SHA:DES-CBC3-SHA:HIGH:!aNULL:!eNULL:!EXPORT:!DES:!MD5:!PSK:!RC4";
+    # Disable session tickets
+    ssl_session_tickets off;
 
-    ssl_dhparam /etc/nginx/dhparams.pem;
+    # Use only TLSv1.2+
+    ssl_protocols TLSv1.2 TLSv1.3;
+
+    # Safe ciphers
+    ssl_ciphers 'ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-\
+    RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256';
     ssl_prefer_server_ciphers on;
 
+    # Safe curves
+    ssl_ecdh_curve secp521r1:secp384r1:prime256v1;
 
+    ssl_dhparam /etc/nginx/dhparams.pem;
+    
     index index.html index.htm;
-
-    location / {
+    
+    add_header Strict-Transport-Security "max-age=63072000; preload" always;
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header X-Content-Type-Options nosniff;
+    add_header X-XSS-Protection "1; mode=block";
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; font-src 'self'; frame-src 'none'; object-src 'none'";
+    add_header Cache-Control "public, s-max-age=300, max-age=3600, stale-while-revalidate=86400";
+    location / {    
+        
+        location = / {
+            add_header Strict-Transport-Security "max-age=63072000; preload" always;
+            add_header X-Frame-Options SAMEORIGIN;
+            add_header X-Content-Type-Options nosniff;
+            add_header X-XSS-Protection "1; mode=block";
+            add_header Content-Security-Policy "default-src 'self'; script-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; font-src 'self'; frame-src 'none'; object-src 'none'";
+            add_header Cache-Control "public, s-max-age=300, max-age=3600, stale-while-revalidate=86400";
+            add_header Link "</css/main.css>; rel=preload;";
+        }
         try_files $uri $uri/ =404;
     }
+    
 }
-{% endfor %}
