fix spelling mistake

--- a/hosts/japgar.com/src/pug/vars.pug
+++ b/hosts/japgar.com/src/pug/vars.pug
@@ -80,7 +80,7 @@
         url:"http://sandylake.firstnation.ca/?q=sandy-lake-board-education",
         date: "Sep 2010 - Jun 2011",
         role: "Substitute Teacher / Network Administrator",
-        description: "For one year, my partner and I lived in a remote fly-in First Nation in Northern Ontario, Canada. I had the incredible opportunity to work as a both subtitute teacher and network administrator for the local school board. During that year I learned much about youth and indigenous culture, and I was challenged to mature as a person, peer and leader."
+        description: "For one year, my partner and I lived in a remote fly-in First Nation in Northern Ontario, Canada. I had the incredible opportunity to work as a both substitute teacher and network administrator for the local school board. During that year I learned much about youth and indigenous culture, and I was challenged to mature as a person, peer and leader."
       },
       "Nipissing University": {
         url:"https://www.nipissingu.ca/",
