--- a/hosts/japgar.com/src/pug/vars.pug
+++ b/hosts/japgar.com/src/pug/vars.pug
@@ -86,7 +86,7 @@
         url:"https://www.nipissingu.ca/",
         date: "Sep 2009 - Feb 2010",
         role: "Web Developer",
-        description: "At Nipissing University I worked on content-management systems, assisted professors online course material, and developed multimedia content for the university website."
+        description: "At Nipissing University I worked on content-management systems, assisted professors in preparing online course material, and developed multimedia content for the university website."
       }
     }
   }
